--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <section>
     <h2>Watch This</h2>
-    <video width="600" controls>
+    <video width="600" controls autoplay muted>
       <source src="D:\Microsite\myvideo.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>  
