--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <section>
     <h2>Watch This</h2>
     <video width="600" controls autoplay muted>
-      <source src="D:\Microsite\myvideo.mp4" type="video/mp4">
+      <source src="https://raw.githubusercontent.com/Nisha18-S/Microsite/refs/heads/main/myvideo.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>  
   </section>
